Groups based on Docket Sheet and not individual docket number of the count. Also persists the group setting between page reloads.

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -39,7 +39,7 @@
                 <div class="header-bar">
                     <h1>Filings for {{petitioner.name}}</h1>
                     <div class="header-bar__controls">
-                        <label v-if="numDockets > 1">Group Counts from Multiple Dockets <input type="checkbox" v-model="groupCounts"></label>
+                        <label v-if="numDockets > 1">Group Counts from Multiple Docket Sheets <input type="checkbox" v-model="groupCounts"></label>
                         <button id="js-print" class="btn btn-primary no-print">Print All</button>
                         <button id="js-export" class="btn btn-primary no-print" disabled>Export to CSV</button>
                     </div>
