Removes unused files. Moves filing page app to the main directory and renames files.

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Filings Page</title>
-    <link href="forms.css" rel="stylesheet" type="text/css">
+    <link href="filings.css" rel="stylesheet" type="text/css">
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -398,7 +398,7 @@
         </div>
     </template>
     </div>
-    <script id='script' src="filing-app.js"></script>
+    <script id='script' src="filings.js"></script>
 
 </body>
 
