--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -41,7 +41,7 @@
                     <div class="header-bar__controls">
                         <label v-if="numDockets > 1">Group Counts from Multiple Docket Sheets <input type="checkbox" v-model="groupCounts"></label>
                         <button id="js-print" class="btn btn-primary no-print">Print All</button>
-                        <button id="js-export" class="btn btn-primary no-print" disabled>Export to CSV</button>
+                        <button id="js-export" class="btn btn-primary no-print">Export to CSV</button>
                     </div>
                 </div>
             </div>
@@ -399,6 +399,7 @@
     </template>
     </div>
     <script id='script' src="filings.js"></script>
+    <script id='script' src="csv.js"></script>
 
 </body>
 
