--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -291,8 +291,8 @@
                                                                 <p class="no-visible filing-closing__petitioner-address" v-html="nl2br(settings['attorneyAddress'])"></p>
                                                                 <textarea class="no-print" v-model="settings['attorneyAddress']" placeholder="Attorney Address"></textarea>
 
-                                                                <p class="filing-closing__phone">Phone: <span class="no-visible">{{settings['attorney-phone']}}</span>
-                                                                    <input class="no-print" v-model="settings['attorney-phone']" placeholder="Attorney Phone Number">
+                                                                <p class="filing-closing__phone">Phone: <span class="no-visible">{{settings['attorneyPhone']}}</span>
+                                                                    <input class="no-print" v-model="settings['attorneyPhone']" placeholder="Attorney Phone Number">
                                                                 </p>
                                                             </div>
                                                         </template>
