added running count label

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -68,7 +68,7 @@
             <button data-generate class="btn btn-success">Generate Documents <i class="fas fa-external-link-alt"></i></button>
         </div>
     </div>
-    <p class="section-label">Counts</p>
+    <p id="runningCount" class="section-label">Counts</p>
     <hr>
     <div id="countCards" class="count-cards accordion inset text-center"></div>
     <hr>
