Fixes extra space between "charge" and "s".

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -110,8 +110,7 @@
                                                 <template v-else>
                                                     by and through counsel,
                                                     <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
-                                                </template>, and hereby moves the Court to expunge the record of the above-captioned conviction
-                                                <span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602.</p>
+                                                </template>, and hereby moves the Court to expunge the record of the above-captioned conviction<span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602.</p>
 
                                             <p>1. Petitioner was convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
                                             <table class="count-table">
@@ -152,8 +151,7 @@
                                                 <template v-else>
                                                     by and through counsel,
                                                     <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
-                                                </template>, and hereby moves the Court to expunge the record of the following charge
-                                                <span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7603.</p>
+                                                </template>, and hereby moves the Court to expunge the record of the following charge<span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7603.</p>
                                             <p>1. Petitioner was charged but never convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
                                             <table class="count-table">
                                                 <thead class="count-table__header">
